--- a/front-expo/package.json
+++ b/front-expo/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "front-expo",
-  "version": "1.0.0",
-  "private": true,
-  "main": "expo/AppEntry",
-  "scripts": {
-    "start": "expo start",
-    "build": "expo build:web",  // 이 줄을 추가
-    "test": "jest"
-  },
-  "dependencies": {
-    "expo": "^51.0.0",
-    "expo-status-bar": "~3.0.0",
-    "react": "18.2.0",
-    "react-native": "0.70.5",
-    "react-native-web": "^0.18.10",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "babel-preset-expo": "^9.0.0"
+  "expo": {
+    "name": "front-expo",
+    "slug": "front-expo",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "scheme": "iossharedemo",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.iTuss.iossharedemo",
+      "infoPlist": {
+        "NSMicrophoneUsageDescription": "화면 방송 중 마이크 오디오를 전송하기 위해 필요합니다."
+      }
+    },
+    "android": {
+      "adaptiveIcon": {
+        "backgroundColor": "#E6F4FE",
+        "foregroundImage": "./assets/images/android-icon-foreground.png",
+        "backgroundImage": "./assets/images/android-icon-background.png",
+        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+      },
+      "edgeToEdgeEnabled": true,
+      "predictiveBackGestureEnabled": false
+    },
+    "web": {
+      "output": "static",
+      "favicon": "./assets/images/favicon.png"
+    },
+    "plugins": [],
+    "experiments": {
+      "typedRoutes": false,
+      "reactCompiler": true
+    }
   }
 }
